--- a/project 2/index.html
+++ b/project 2/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	
- 	<script src="/Users/yuzhengyan/git/d3/d3.js"></script>
+ 	<script type="text/javascript" src="../d3.js"></script>
 	<script src="script.js"></script>
    
 
