--- a/project 2/index.html
+++ b/project 2/index.html
@@ -3,11 +3,17 @@
 <head>
     <title></title>
 </head>
-<body>
+
 	
  	<script type="text/javascript" src="../d3.js"></script>
 	<script src="script.js"></script>
-   
 
+<!--     <script type="text/javascript">
+    	window.onload = function() {
+			readData("cities.csv");};
+	</script> -->
+
+
+<body>
 </body>
 </html>
