--- a/project 2/index.html
+++ b/project 2/index.html
@@ -8,10 +8,10 @@
  	<script type="text/javascript" src="../d3.js"></script>
 	<script src="script.js"></script>
 
-<!--     <script type="text/javascript">
+    <script type="text/javascript">
     	window.onload = function() {
 			readData("cities.csv");};
-	</script> -->
+	</script>
 
 
 <body>
