--- a/project 3/stripes.html
+++ b/project 3/stripes.html
@@ -1,17 +1,14 @@
-<!-- Original stripes visualization by Ed Hawkins: https://twitter.com/ed_hawkins -->
 <!doctype html>
 <html>
-<head>
-<title>Warming Stripes</title>
-<meta charset="utf-8">
-<script type="text/javascript" src="./d3.js"></script>
-<!-- <script src="./stripes.js"></script> -->
-<script>
-console.log(d3);
-</script>
-</head>
-<body>
-	<div id="land"></div>
-</body>
+	<head>
+		<title>Let’s make a face with D3.js!</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<script type="text/javascript" src="../d3.js"></script>
+	</head>
+	
+	<body>
+		<svg width="960" height="500"></svg>
+		<script type="text/javascript" src="bundle.js"></script>
+	</body>
 </html>
 
